--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -7,11 +7,21 @@
     <title>Document</title>
     <style>
         body {
+            /*
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -28,6 +38,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ut eaque eum possimus tempore exercitationem, sit illum debitis expedita, nihil non alias, nobis officia totam accusantium et reiciendis nesciunt ullam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt eaque possimus quae quod nostrum, nihil ab, aliquid, officia veniam maxime cum quia repellendus soluta accusantium unde omnis quam inventore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias, cum error impedit nobis non! Eveniet velit excepturi, distinctio blanditiis quos commodi id nihil ex rem voluptatibus minus accusamus adipisci!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ut eaque eum possimus tempore exercitationem, sit illum debitis expedita, nihil non alias, nobis officia totam accusantium et reiciendis nesciunt ullam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt eaque possimus quae quod nostrum, nihil ab, aliquid, officia veniam maxime cum quia repellendus soluta accusantium unde omnis quam inventore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias, cum error impedit nobis non! Eveniet velit excepturi, distinctio blanditiis quos commodi id nihil ex rem voluptatibus minus accusamus adipisci!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ut eaque eum possimus tempore exercitationem, sit illum debitis expedita, nihil non alias, nobis officia totam accusantium et reiciendis nesciunt ullam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt eaque possimus quae quod nostrum, nihil ab, aliquid, officia veniam maxime cum quia repellendus soluta accusantium unde omnis quam inventore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias, cum error impedit nobis non! Eveniet velit excepturi, distinctio blanditiis quos commodi id nihil ex rem voluptatibus minus accusamus adipisci!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ut eaque eum possimus tempore exercitationem, sit illum debitis expedita, nihil non alias, nobis officia totam accusantium et reiciendis nesciunt ullam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt eaque possimus quae quod nostrum, nihil ab, aliquid, officia veniam maxime cum quia repellendus soluta accusantium unde omnis quam inventore tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi alias, cum error impedit nobis non! Eveniet velit excepturi, distinctio blanditiis quos commodi id nihil ex rem voluptatibus minus accusamus adipisci!</p>
     </main>
 </body>
