--- a/Exercícios/ex025/form002.html
+++ b/Exercícios/ex025/form002.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="post"></form>
-    <p>
-        <label for="iusu">Usuário</label>
-        <input type="text" name="usu" id="iusu" required miniength="5" maxlength="30" size="10" placeholder="nome do usuário">
-    </p>
-    <p>
-        <label for="isen">Senha</label>
-        <input type="password" name="sen" id="isen" required miniength="8" maxlength="20" size="8" placeholder="mínimo 8 letras" autocomplete="current-password">
-    </p>
-    <p>
-        <input type="submit" value="Enviar" >
-        <input type="reset" value="Limpar">
-    </p>
+    <form action="cadastro.php" method="post">
+        <p>
+            <label for="iusu">Usuário</label>
+            <input type="text" name="usu" id="iusu" required miniength="5" maxlength="30" size="10" placeholder="nome do usuário">
+        </p>
+        <p>
+            <label for="isen">Senha</label>
+            <input type="password" name="sen" id="isen" required miniength="8" maxlength="20" size="8" placeholder="mínimo 8 letras" autocomplete="current-password">
+        </p>
+        <p>
+            <input type="submit" value="Enviar" >
+            <input type="reset" value="Limpar">
+        </p>
+    </form>
+        
 </body>
 </html>
